<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.MainActivity">

    <View
        android:id="@+id/from_area"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@id/vertical_divider"
        app:layout_constraintHeight_percent="0.35" />

    <TextView
        android:id="@+id/from_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:fontFamily="@font/avenir"
        app:layout_constraintBottom_toTopOf="@id/text_for_translation"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/translate_direction"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="RU" />

    <ImageView
        android:id="@+id/translate_direction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_arrows"
        android:contentDescription="@string/translate_screen_arrows_content_description"
        app:layout_constraintBottom_toTopOf="@id/text_for_translation"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/to_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:fontFamily="@font/avenir"
        app:layout_constraintBottom_toTopOf="@id/text_for_translation"
        app:layout_constraintLeft_toRightOf="@id/translate_direction"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="RU" />

    <EditText
        android:id="@+id/text_for_translation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:hint="@string/translate_screen_hint_edit"
        android:inputType="text"
        android:paddingStart="16dp"
        android:paddingLeft="16dp"
        android:paddingEnd="16dp"
        android:paddingRight="16dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textCursorDrawable="@null"
        android:textSize="24sp"
        android:theme="@style/MyEditTextTheme"
        app:fontFamily="@font/avenir"
        app:layout_constraintBottom_toBottomOf="@id/from_area"
        app:layout_constraintTop_toTopOf="@id/from_area" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_divider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <ProgressBar
        android:id="@+id/translate_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:theme="@style/ProgressBarPrimaryColor"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vertical_divider" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/translation_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/vertical_divider" />

</androidx.constraintlayout.widget.ConstraintLayout>